refactor: 리팩토링, 테스트 코드 작성