@@ -3,43 +3,30 @@ package menu.view;
 import camp.nextstep.edu.missionutils.Console;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import menu.util.InputValidator;
 
 public class InputView {
     public static List<String> readCoachNames() {
         System.out.println("코치의 이름을 입력해 주세요. (, 로 구분)");
         String input = Console.readLine();
-
         InputValidator.validateHasInput(input);
 
-        List<String> names = Arrays.stream(input.split(","))
+        return Arrays.stream(input.split(","))
                 .map(String::trim)
-                .toList();
-
-        InputValidator.validateDuplicate(names);
-        InputValidator.validateHasBlankName(names);
-
-        for (String name : names) {
-            InputValidator.validateNameLengthRange(name);
-        }
-
-        InputValidator.validateCoachCount(names);
-
-        return names;
+                .collect(Collectors.toList());
     }
 
-    public static List<String> readIsInedibleMenu(String coach) {
-        System.out.println("\n" + coach + "(이)가 못 먹는 메뉴를 입력해 주세요.");
+    public static List<String> readInedibleMenus(String coachName) {
+        System.out.println("\n" + coachName + "(이)가 못 먹는 메뉴를 입력해 주세요.");
         String input = Console.readLine();
 
-        List<String> menus = Arrays.stream(input.split(","))
+        if (input == null || input.isBlank()) {
+            return List.of();
+        }
+
+        return Arrays.stream(input.split(","))
                 .map(String::trim)
-                .toList();
-
-        InputValidator.validateDuplicate(menus);
-        InputValidator.validateHasBlankName(menus);
-        InputValidator.validateMenuCount(menus);
-
-        return menus;
+                .collect(Collectors.toList());
     }
 }
